--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,11 @@
   <header>
     <nav class="navbar navbar-dark justify-content-between" style="background-color: #20e9e6;">
       <a class="navbar-brand" href="/">todo-sequelize</a>
-      <a class="btn btn-outline-light" href="/users/login">Login</a>
+      {{#if isAuthenticated}}
+      <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+      {{else}}
+      <a href="/users/login" class="btn btn-outline-info">Login</a>
+      {{/if}}
     </nav>
   </header>
 
